feat: Implement secure one-command setup and launch system
- Add smart launcher script (./grocery_sorter) for one-command usage
- Create automated setup wizard with three options (credentials, help, demo)
- Remove sensitive files from git history and add to .gitignore
- Create SECURITY.md with comprehensive security guidelines
- Add client_secrets.example.json for user guidance
- Remove debug scripts that could expose sensitive information
- Update README with simplified setup instructions
- Implement automatic setup detection and guidance

Users can now run './grocery_sorter' and get guided through setup automatically.
All sensitive credentials are properly secured and excluded from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,29 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Security: Ignore sensitive Google API credentials and tokens
+/config/client_secrets.json
+/config/tokens.yaml
+/config/credentials.yml.enc
+
+# Security: Ignore any other credential files
+*.key
+*.pem
+*.p12
+*.pfx
+
+# Security: Ignore environment-specific configuration
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Security: Ignore debug and test files that might contain sensitive data
+debug_oauth.rb
+check_oauth_account.rb
+check_scope.rb
+test_*.rb
+simple_test.rb
+reauthenticate.rb
