Add cross-platform setup: Makefile, Linux install script, improved .gitignore, and docs
- Add Makefile for easy setup on macOS and Linux (with OS detection, system deps, install, uninstall, dev targets)
- Add install.sh for robust Linux installation (apt, dnf, pacman, yum support)
- Add LINUX_INSTALL.md with detailed Linux installation and troubleshooting guide
- Update README.md with Linux and macOS setup instructions, troubleshooting, and Makefile usage
- Expand .gitignore for build, OS, and editor artifacts
- Remove old .keep files from log/tmp

This makes the app easy to install and use for both Linux and Mac users, following best practices from Linux Handbook and Unix community. Ready for open source!

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,38 @@ check_scope.rb
 test_*.rb
 simple_test.rb
 reauthenticate.rb
+
+# Build and installation artifacts
+/build/
+*.o
+*.so
+*.dylib
+*.dll
+*.exe
+*.app
+*.dmg
+*.deb
+*.rpm
+*.tar.gz
+*.zip
+
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Editor and IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Backup files
+*.bak
+*.backup
+*.old
