--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,16 +56,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    # services:
-    #  redis:
-    #    image: redis
-    #    ports:
-    #      - 6379:6379
-    #    options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-      - name: Install packages
-        run: sudo apt-get update && sudo apt-get install --no-install-recommends -y build-essential git libyaml-dev pkg-config google-chrome-stable
-
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -75,16 +66,45 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
-      - name: Run tests
-        env:
-          RAILS_ENV: test
-          # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:test:prepare test test:system
+      - name: Install system dependencies for desktop app
+        run: |
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends -y \
+            build-essential \
+            git \
+            libyaml-dev \
+            pkg-config \
+            libgtk-3-dev \
+            libwebkit2gtk-4.0-dev
 
-      - name: Keep screenshots from failed system tests
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: screenshots
-          path: ${{ github.workspace }}/tmp/screenshots
-          if-no-files-found: ignore
+      - name: Test Ruby syntax
+        run: |
+          ruby -c script/grocery_sorter.rb
+          ruby -c script/setup.rb
+          ruby -c app/services/google_auth_service.rb
+          ruby -c app/services/google_docs_service.rb
+          ruby -c app/services/ollama_service.rb
+
+      - name: Test Makefile syntax
+        run: make -n help
+
+      - name: Test installation script syntax
+        run: bash -n install.sh
+
+      - name: Run basic functionality test
+        run: |
+          # Test that the app can be loaded without errors
+          ruby -e "
+            require 'bundler/setup'
+            require_relative 'script/grocery_sorter'
+            puts '✅ App loads successfully'
+          "
+
+      - name: Test setup wizard (dry run)
+        run: |
+          # Test setup script can be loaded
+          ruby -e "
+            require 'bundler/setup'
+            require_relative 'script/setup'
+            puts '✅ Setup script loads successfully'
+          "
