--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,12 @@ jobs:
             libyaml-dev \
             pkg-config \
             libgtk-3-dev \
-            libwebkit2gtk-4.0-dev
+            libwebkit2gtk-4.1-dev \
+            libcairo2-dev \
+            libpango1.0-dev \
+            libatk1.0-dev \
+            libgdk-pixbuf2.0-dev \
+            libglib2.0-dev
 
       - name: Test Ruby syntax
         run: |
